--- a/03-classification/homework.ipynb
+++ b/03-classification/homework.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "94d939a8",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a5fffa19",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9fde0080",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
        "  'lead_score'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3c53b729",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "bd165f21",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "db33f89c",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "fe4595f8",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
        "Name: industry, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ae580311",
    "metadata": {},
    "outputs": [
@@ -462,13 +462,44 @@
        "lead_score                         0.009888    1.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[numerical_columns].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f14d17ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "interaction_count  annual_income               0.027036\n",
+       "lead_score         annual_income               0.015610\n",
+       "                   interaction_count           0.009888\n",
+       "annual_income      number_of_courses_viewed    0.009770\n",
+       "lead_score         number_of_courses_viewed   -0.004879\n",
+       "interaction_count  number_of_courses_viewed   -0.023565\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_matrix = df[numerical_columns].corr()\n",
+    "\n",
+    "mask = np.triu(np.ones_like(corr_matrix, dtype=bool))\n",
+    "\n",
+    "corr_matrix.where(~mask).stack().sort_values(ascending=False)"
    ]
   },
   {
@@ -485,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "3700df6e",
    "metadata": {},
    "outputs": [],
@@ -495,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "48f5bc10",
    "metadata": {},
    "outputs": [],
@@ -506,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "f7266d96",
    "metadata": {},
    "outputs": [
@@ -516,7 +547,7 @@
        "((876, 9), (293, 9), (293, 9))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "97ad918c",
    "metadata": {},
    "outputs": [],
@@ -554,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "fb7bb568",
    "metadata": {},
    "outputs": [
@@ -593,33 +624,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "99a7f193",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction import DictVectorizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "58df01a0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "\n",
     "dv = DictVectorizer(sparse=False)\n",
     "\n",
     "train_dict = df_train[categorical_columns + numerical_columns].to_dict(orient='records')\n",
     "X_train = dv.fit_transform(train_dict)\n",
     "\n",
     "val_dict = df_val[categorical_columns + numerical_columns].to_dict(orient='records')\n",
-    "X_val = dv.transform(val_dict)"
+    "X_val = dv.transform(val_dict)\n",
+    "\n",
+    "test_dict = df_test[categorical_columns + numerical_columns].to_dict(orient='records')\n",
+    "X_test = dv.transform(test_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "84d977f1",
    "metadata": {},
    "outputs": [
@@ -627,14 +653,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.6996587030716723\n"
+      "val accuracy: 0.6996587030716723\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nmodel = LogisticRegression(solver=\\'liblinear\\', C=1.0, max_iter=1000, random_state=42)\\nmodel.fit(np.concat([X_train, X_val]), np.concat([y_train, y_val]))\\ny_pred = model.predict_proba(X_test)[:, 1]\\n\\ny_pred_decision = (y_pred >= 0.5).astype(int)\\n\\naccuracy = (y_pred_decision == y_test).mean()\\n\\nprint(f\"test accuracy: {accuracy}\")\\n'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "model = LogisticRegression(solver='liblinear', C=1e0, max_iter=1000, random_state=42)\n",
+    "model = LogisticRegression(solver='liblinear', C=1.0, max_iter=1000, random_state=42)\n",
     "model.fit(X_train, y_train)\n",
     "y_pred = model.predict_proba(X_val)[:, 1]\n",
     "\n",
@@ -642,7 +678,20 @@
     "\n",
     "accuracy = (y_pred_decision == y_val).mean()\n",
     "\n",
-    "print(f\"accuracy: {accuracy}\")"
+    "print(f\"val accuracy: {accuracy}\")\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "model = LogisticRegression(solver='liblinear', C=1.0, max_iter=1000, random_state=42)\n",
+    "model.fit(np.concat([X_train, X_val]), np.concat([y_train, y_val]))\n",
+    "y_pred = model.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "y_pred_decision = (y_pred >= 0.5).astype(int)\n",
+    "\n",
+    "accuracy = (y_pred_decision == y_test).mean()\n",
+    "\n",
+    "print(f\"test accuracy: {accuracy}\")\n",
+    "'''"
    ]
   },
   {
@@ -660,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "3360f916",
    "metadata": {},
    "outputs": [
@@ -668,14 +717,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lead_source is removed. Difference is 0.13993174061433444\n",
-      "industry is removed. Difference is 0.14675767918088733\n",
-      "employment_status is removed. Difference is 0.15017064846416384\n",
-      "location is removed. Difference is 0.15017064846416384\n",
-      "number_of_courses_viewed is removed. Difference is 0.13993174061433444\n",
-      "annual_income is removed. Difference is 0.13310580204778155\n",
+      "lead_source is removed. Difference is -0.0034129692832765013\n",
+      "industry is removed. Difference is 0.0\n",
+      "employment_status is removed. Difference is 0.0034129692832763903\n",
+      "location is removed. Difference is -0.010238907849829393\n",
+      "number_of_courses_viewed is removed. Difference is 0.14334470989761094\n",
+      "annual_income is removed. Difference is -0.15358361774744034\n",
       "interaction_count is removed. Difference is 0.14334470989761094\n",
-      "lead_score is removed. Difference is 0.15017064846416384\n"
+      "lead_score is removed. Difference is -0.0068259385665528916\n"
      ]
     }
    ],
@@ -690,7 +739,7 @@
     "    train_dict = df_train[features_removed].to_dict(orient='records')\n",
     "    X_train = dv.fit_transform(train_dict)\n",
     "\n",
-    "    val_dict = df_test[features_removed].to_dict(orient='records')\n",
+    "    val_dict = df_val[features_removed].to_dict(orient='records')\n",
     "    X_val = dv.fit_transform(val_dict)\n",
     "\n",
     "    model = LogisticRegression(solver='liblinear', C=1.0, max_iter=1000, random_state=42)\n",
