--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "e03a0fda-abc9-40af-9b90-1c9cbe5c0d02",
    "metadata": {},
    "outputs": [],
@@ -26,51 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "cdd6c098",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2.3.1'"
+       "'2.3.3'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "4a545e9a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2025-09-16 15:49:58--  https://raw.githubusercontent.com/alexeygrigorev/datasets/master/car_fuel_efficiency.csv\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 874188 (854K) [text/plain]\n",
-      "Saving to: ‘car_fuel_efficiency.csv’\n",
-      "\n",
-      "car_fuel_efficiency 100%[===================>] 853.70K  --.-KB/s    in 0.01s   \n",
-      "\n",
-      "2025-09-16 15:49:58 (80.6 MB/s) - ‘car_fuel_efficiency.csv’ saved [874188/874188]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!wget https://raw.githubusercontent.com/alexeygrigorev/datasets/master/car_fuel_efficiency.csv"
    ]
   },
   {
@@ -85,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "c1efdb8d",
    "metadata": {},
    "outputs": [],
@@ -95,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cba9be4f",
    "metadata": {},
    "outputs": [
@@ -245,7 +217,7 @@
        "max       24.300000  2023.000000     4.000000            25.967222  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "ada92d94",
    "metadata": {},
    "outputs": [
@@ -266,7 +238,7 @@
        "(9704, 11)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "e7fca1a5",
    "metadata": {},
    "outputs": [
@@ -297,7 +269,7 @@
        "(array(['Gasoline', 'Diesel'], dtype=object), 2)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "33db6ca0",
    "metadata": {},
    "outputs": [
@@ -328,7 +300,7 @@
        "(9704, 11)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "55d92c6c",
    "metadata": {},
    "outputs": [
@@ -349,7 +321,7 @@
        "Index(['num_cylinders', 'horsepower', 'acceleration', 'num_doors'], dtype='object')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "f52f1ba8",
    "metadata": {},
    "outputs": [
@@ -506,7 +478,7 @@
        "4            12.488369  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "22398ed1",
    "metadata": {},
    "outputs": [
@@ -527,7 +499,7 @@
        "np.float64(23.759122836520497)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "id": "f1ad9eee",
    "metadata": {},
    "outputs": [
@@ -563,7 +535,7 @@
        "np.float64(149.0)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "c4d19ea7",
    "metadata": {},
    "outputs": [
@@ -585,7 +557,7 @@
        "Name: horsepower, dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,17 +568,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "9ae5208b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = df['horsepower'].fillna(df['horsepower'].mode().iloc[0])"
+    "df2 = df['horsepower'].fillna(df['horsepower'].mode().iloc[0]).copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "id": "93270ff6",
    "metadata": {},
    "outputs": [
@@ -627,7 +599,7 @@
        "Name: horsepower, Length: 9704, dtype: float64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "id": "4ed08caf",
    "metadata": {},
    "outputs": [
@@ -648,7 +620,7 @@
        "np.float64(152.0)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,17 +649,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "id": "3824fa04",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.5187709081074054)"
+       "np.float64(0.5187709081074036)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +678,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -720,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
