--- a/06-trees/homework.ipynb
+++ b/06-trees/homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "f144e4f0",
    "metadata": {},
    "outputs": [],
@@ -13,39 +13,6 @@
     "import sklearn\n",
     "import seaborn as sns\n",
     "import xgboost as xgb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c58a833d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2025-09-17 20:18:11--  https://github.com/alexeygrigorev/datasets/raw/refs/heads/master/jamb_exam_results.csv\n",
-      "Resolving github.com (github.com)... 140.82.113.4\n",
-      "Connecting to github.com (github.com)|140.82.113.4|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://raw.githubusercontent.com/alexeygrigorev/datasets/refs/heads/master/jamb_exam_results.csv [following]\n",
-      "--2025-09-17 20:18:11--  https://raw.githubusercontent.com/alexeygrigorev/datasets/refs/heads/master/jamb_exam_results.csv\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.110.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 391501 (382K) [text/plain]\n",
-      "Saving to: ‘jamb_exam_results.csv’\n",
-      "\n",
-      "jamb_exam_results.c 100%[===================>] 382.33K  --.-KB/s    in 0.005s  \n",
-      "\n",
-      "2025-09-17 20:18:11 (74.3 MB/s) - ‘jamb_exam_results.csv’ saved [391501/391501]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!wget https://github.com/alexeygrigorev/datasets/raw/refs/heads/master/jamb_exam_results.csv"
    ]
   },
   {
@@ -64,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "688d957e",
    "metadata": {},
    "outputs": [
@@ -250,13 +217,13 @@
        "4                      1  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df=pd.read_csv(\"jamb_exam_results.csv\")\n",
+    "df=pd.read_csv(\"https://github.com/alexeygrigorev/datasets/raw/refs/heads/master/jamb_exam_results.csv\")\n",
     "\n",
     "df.head(5)"
    ]
@@ -1037,7 +1004,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1051,7 +1018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
