--- a/04-evaluation/homework-2024.ipynb
+++ b/04-evaluation/homework-2024.ipynb
@@ -56,7 +56,27 @@
    "id": "ccb101bf",
    "metadata": {},
    "source": [
-    "# Data preparation"
+    "# Data preparation\n",
+    "\n",
+    "For the rest of the homework, you'll need to use only these columns:\n",
+    "\n",
+    "* `'age'`,\n",
+    "* `'job'`,\n",
+    "* `'marital'`,\n",
+    "* `'education'`,\n",
+    "* `'balance'`,\n",
+    "* `'housing'`,\n",
+    "* `'contact'`,\n",
+    "* `'day'`,\n",
+    "* `'month'`,\n",
+    "* `'duration'`,\n",
+    "* `'campaign'`,\n",
+    "* `'pdays'`,\n",
+    "* `'previous'`,\n",
+    "* `'poutcome'`,\n",
+    "* `'y'`\n",
+    "\n",
+    "Split the data into 3 parts: train/validation/test with 60%/20%/20% distribution. Use `train_test_split` function for that with `random_state=1`"
    ]
   },
   {
@@ -320,7 +340,19 @@
    "id": "13dc132a",
    "metadata": {},
    "source": [
-    "# Q1"
+    "# Q1\n",
+    "\n",
+    "* For each numerical variable, use it as score (aka prediction) and compute the AUC with the `y` variable as ground truth.\n",
+    "* Use the training dataset for that\n",
+    "\n",
+    "\n",
+    "If your AUC is < 0.5, invert this variable by putting \"-\" in front\n",
+    "\n",
+    "(e.g. `-df_train['engine_hp']`)\n",
+    "\n",
+    "AUC can go below 0.5 if the variable is negatively correlated with the target variable. You can change the direction of the correlation by negating this variable - then negative correlation becomes positive.\n",
+    "\n",
+    "Which numerical variable (among the following 4) has the highest AUC?"
    ]
   },
   {
@@ -364,7 +396,15 @@
    "id": "14a08d73",
    "metadata": {},
    "source": [
-    "# Q2"
+    "# Q2\n",
+    "\n",
+    "Apply one-hot-encoding using `DictVectorizer` and train the logistic regression with these parameters:\n",
+    "\n",
+    "```python\n",
+    "LogisticRegression(solver='liblinear', C=1.0, max_iter=1000)\n",
+    "```\n",
+    "\n",
+    "What's the AUC of this model on the validation dataset? (round to 3 digits)"
    ]
   },
   {
@@ -439,7 +479,13 @@
    "id": "2309da33",
    "metadata": {},
    "source": [
-    "# Q3"
+    "# Q3\n",
+    "\n",
+    "* Evaluate the model on all thresholds from 0.0 to 1.0 with step 0.01\n",
+    "* For each threshold, compute precision and recall\n",
+    "* Plot them\n",
+    "\n",
+    "At which threshold precision and recall curves intersect?"
    ]
   },
   {
@@ -513,7 +559,11 @@
    "id": "3206f998",
    "metadata": {},
    "source": [
-    "# Q4"
+    "# Q4\n",
+    "\n",
+    "Let's compute F1 for all thresholds from 0.0 to 1.0 with increment 0.01\n",
+    "\n",
+    "At which threshold F1 is maximal?"
    ]
   },
   {
@@ -581,7 +631,20 @@
    "id": "4e4e5f68",
    "metadata": {},
    "source": [
-    "# Q5\n"
+    "# Q5\n",
+    "\n",
+    "Use the `KFold` class from Scikit-Learn to evaluate our model on 5 different folds:\n",
+    "\n",
+    "```\n",
+    "KFold(n_splits=5, shuffle=True, random_state=1)\n",
+    "```\n",
+    "\n",
+    "* Iterate over different folds of `df_full_train`\n",
+    "* Split the data into train and validation\n",
+    "* Train the model on train with these parameters: `LogisticRegression(solver='liblinear', C=1.0, max_iter=1000)`\n",
+    "* Use AUC to evaluate the model on validation\n",
+    "\n",
+    "How large is standard deviation of the scores across different folds?"
    ]
   },
   {
@@ -659,7 +722,16 @@
    "id": "300d5a25",
    "metadata": {},
    "source": [
-    "# Q6"
+    "# Q6\n",
+    "\n",
+    "Now let's use 5-Fold cross-validation to find the best parameter `C`\n",
+    "\n",
+    "* Iterate over the following `C` values: `[0.000001, 0.001, 1]`\n",
+    "* Initialize `KFold` with the same parameters as previously\n",
+    "* Use these parameters for the model: `LogisticRegression(solver='liblinear', C=C, max_iter=1000)`\n",
+    "* Compute the mean score as well as the std (round the mean and std to 3 decimal digits)\n",
+    "\n",
+    "Which `C` leads to the best mean score?"
    ]
   },
   {
@@ -708,7 +780,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -722,7 +794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
