--- a/08-deep-learning/homework-2025.ipynb
+++ b/08-deep-learning/homework-2025.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "462f3cd1",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,17 @@
     "\n",
     "torch.backends.cudnn.deterministic = True\n",
     "torch.backends.cudnn.benchmark = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24cd30b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://github.com/SVizor42/ML_Zoomcamp/releases/download/straight-curly-data/data.zip\n",
+    "!unzip data.zip"
    ]
   },
   {
